# swagger/docs/swagger.json
@@ -204,6 +204,12 @@
                   },
                   "is_featured": {
                     "example": "any"
+                  },
+                  "live_status_url": {
+                    "example": "any"
+                  },
+                  "prometheus_metrics_url": {
+                    "example": "any"
                   }
                 }
               }
@@ -231,6 +237,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
@@ -261,8 +270,8 @@
           "200": {
             "description": "OK"
           },
-          "400": {
-            "description": "Bad Request"
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -859,10 +868,56 @@
     },
     "/metrics": {
       "get": {
+        "tags": [
+          "Metrics Data"
+        ],
         "description": "",
+        "parameters": [
+          {
+            "name": "url",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/healthstatus": {
+      "get": {
+        "tags": [
+          "Metrics Data"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "url",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
